--- a/app/src/main/res/layout-v26/activity_detail_play_list.xml
+++ b/app/src/main/res/layout-v26/activity_detail_play_list.xml
@@ -3,84 +3,88 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/main.appbar"
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:fitsSystemWindows="true"
-        >
-<com.google.android.material.appbar.CollapsingToolbarLayout
-            android:id="@+id/main.collapsing"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            android:fitsSystemWindows="true"
-            app:contentScrim="?attr/colorPrimary"
-            app:expandedTitleMarginStart="48dp"
-            app:expandedTitleMarginEnd="64dp"
-            >
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#fff"/>
-    <TextView
-        android:id="@+id/playlist"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="149dp"
-        android:layout_marginTop="20dp"
-        android:text="Playlist"
-        android:textAppearance="@style/playlist"
-        android:lineSpacingExtra="0sp"
-        android:gravity="center_vertical"/>
+    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <TextView
-        android:id="@+id/tv_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="16dp"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="56dp"
-        android:text="@string/emotional_w"
-        android:textAppearance="@style/emotional_w"
-        android:gravity="top"/>
-    <TextView
-        android:id="@+id/tv_description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="150dp"
-        android:text="@string/in_this_ser"
-        android:textAppearance="@style/in_this_ser"
-        android:gravity="top"
-        />
 <com.google.android.material.appbar.AppBarLayout
-                android:id="@+id/main.toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-    android:alpha="0.20"
-                app:liftOnScroll="true"/>
-</com.google.android.material.appbar.CollapsingToolbarLayout>
+        android:id="@+id/appBarLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:liftOnScroll="false"
+        app:layout_scrollFlags="noScroll"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+        <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:id="@+id/collapsingToolbarLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_scrollFlags="exitUntilCollapsed|scroll">
+
+            <TextView
+                android:id="@+id/tv_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="56dp"
+                android:gravity="top"
+                android:text="@string/emotional_w"
+                android:textAppearance="@style/emotional_w" />
+
+            <TextView
+                android:id="@+id/tv_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="150dp"
+                android:gravity="top"
+                android:text="@string/in_this_ser"
+                android:textAppearance="@style/in_this_ser" />
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:background="@drawable/ellipse_2"
+                android:src="@drawable/ic_play_arrow_black_24dp"
+                android:layout_marginTop="200dp"
+                android:layout_marginStart="300dp"
+                app:layout_anchorGravity="bottom|right|end" />
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
+
+
+
+</com.google.android.material.appbar.AppBarLayout>
+    <com.google.android.material.appbar.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        app:liftOnScroll="false"
+        app:layout_scrollFlags="noScroll">
+
+        <TextView
+            android:id="@+id/playlist"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="149dp"
+            android:layout_marginTop="20dp"
+            android:gravity="center_vertical"
+            android:lineSpacingExtra="0sp"
+            app:layout_scrollFlags="noScroll"
+            android:text="Playlist"
+            android:textAppearance="@style/playlist" />
+
+
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_in_detail"
         android:layout_width="match_parent"
-        android:layout_height="700dp"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        android:layout_gravity="center"
-        android:layout_marginBottom="100dp"/>
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:background="@drawable/ellipse_2"
-        android:src="@drawable/ic_play_arrow_black_24dp"
-        app:layout_anchor="@id/main.appbar"
-        app:layout_anchorGravity="bottom|right|end"
-        />
+        android:layout_gravity="center"
+        tools:itemCount="11"
+        tools:listitem="@layout/item_youtube_playlist"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
