--- a/app/src/main/res/layout/activity_detail_video.xml
+++ b/app/src/main/res/layout/activity_detail_video.xml
@@ -1,10 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".detail_video.DetailVideoActivity"
-    android:background="@color/cardview_dark_background">
+    tools:context=".detail_video.DetailVideoActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <com.google.android.exoplayer2.ui.PlayerView
+        android:id="@+id/play_view"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        />
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    <TextView
+        android:id="@+id/tv_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
+
+    <Button
+        android:id="@+id/btn_download"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Download video"
+        android:layout_gravity="center|left"/>
+    <TextView
+        android:id="@+id/tv_description"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
+    </androidx.core.widget.NestedScrollView>
+
+</FrameLayout>
