--- a/app/src/main/res/layout/item_youtube_playlist.xml
+++ b/app/src/main/res/layout/item_youtube_playlist.xml
@@ -46,6 +46,7 @@
         tools:text="This title" />
 
     <TextView
+        android:id="@+id/tv_video"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="video series"
@@ -58,11 +59,4 @@
         tools:layout_editor_absoluteX="229dp"
         tools:layout_editor_absoluteY="64dp" />
 
-    <TextView
-        android:id="@+id/tv_data"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="data"
-        tools:layout_editor_absoluteX="191dp"
-        tools:layout_editor_absoluteY="109dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
