--- a/app/src/main/res/layout-v26/activity_detail_play_list.xml
+++ b/app/src/main/res/layout-v26/activity_detail_play_list.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="wrap_content">
 
-<com.google.android.material.appbar.AppBarLayout
+    <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:liftOnScroll="false"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:layout_scrollFlags="noScroll"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+        app:liftOnScroll="false">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/collapsingToolbarLayout"
@@ -43,23 +42,23 @@
                 android:textAppearance="@style/in_this_ser" />
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="300dp"
+                android:layout_marginTop="200dp"
                 android:background="@drawable/ellipse_2"
                 android:src="@drawable/ic_play_arrow_black_24dp"
-                android:layout_marginTop="200dp"
-                android:layout_marginStart="300dp"
                 app:layout_anchorGravity="bottom|right|end" />
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
 
+    </com.google.android.material.appbar.AppBarLayout>
 
-</com.google.android.material.appbar.AppBarLayout>
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        app:liftOnScroll="false"
-        app:layout_scrollFlags="noScroll">
+        app:layout_scrollFlags="noScroll"
+        app:liftOnScroll="false">
 
         <TextView
             android:id="@+id/playlist"
@@ -69,9 +68,9 @@
             android:layout_marginTop="20dp"
             android:gravity="center_vertical"
             android:lineSpacingExtra="0sp"
-            app:layout_scrollFlags="noScroll"
             android:text="Playlist"
-            android:textAppearance="@style/playlist" />
+            android:textAppearance="@style/playlist"
+            app:layout_scrollFlags="noScroll" />
 
 
     </com.google.android.material.appbar.AppBarLayout>
@@ -81,10 +80,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        tools:itemCount="11"
-        tools:listitem="@layout/item_youtube_playlist"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:itemCount="11"/>
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
