--- a/app/src/main/res/layout/activity_detail_video.xml
+++ b/app/src/main/res/layout/activity_detail_video.xml
@@ -4,10 +4,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".detail_video.VideoActivity">
+    tools:context=".ui.detail_video.VideoActivity">
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/app_bar"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        app:layout_scrollFlags="noScroll"
+        app:liftOnScroll="false">
+
+        <TextView
+            android:id="@+id/playlist"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="149dp"
+            android:layout_marginTop="20dp"
+            android:gravity="center_vertical"
+            android:lineSpacingExtra="0sp"
+            android:text="Playlist"
+            android:textAppearance="@style/playlist"
+            app:layout_scrollFlags="noScroll" />
+
+
+    </com.google.android.material.appbar.AppBarLayout>
+
     <com.google.android.exoplayer2.ui.PlayerView
         android:id="@+id/player_view"
         android:layout_width="match_parent"
+        android:layout_marginTop="50dp"
         android:layout_height="200dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,10 +67,9 @@
                 app:layout_constraintTop_toTopOf="@+id/nested_container" />
 
             <Button
-                android:id="@+id/clickDownload"
+                android:id="@+id/btn_download"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:onClick="clicelable"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:textColor="#fff"
@@ -63,7 +88,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/nested_container"
                 app:layout_constraintStart_toStartOf="@+id/nested_container"
-                app:layout_constraintTop_toBottomOf="@+id/clickDownload" />
+                app:layout_constraintTop_toBottomOf="@+id/btn_download" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
